--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -53,10 +53,12 @@
     <UnityVersion>2020.1.11f1</UnityVersion>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Assets\Scripts\Managers\Managers.cs" />
     <Compile Include="Assets\Scripts\Managers\SoundManager.cs" />
-    <Compile Include="Assets\Scripts\Managers\GameManager.cs" />
     <Compile Include="Assets\Scripts\GameMenu.cs" />
+    <Compile Include="Assets\Scripts\Managers\GameManager.cs" />
+    <Compile Include="Assets\Scripts\Managers\Managers.cs" />
+    <Compile Include="Assets\Scripts\Utils\Fade.cs" />
+    <Compile Include="Assets\Scripts\Utils\Define.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
